--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.3.4",
+        "php": ">=7.3",
         "laravel/framework": "^6.20.26",
         "overtrue/laravel-wechat": "^5.1"
     },
