--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.3",
-        "laravel/framework": ">=5.5",
-        "overtrue/laravel-wechat": "^5.x"
+        "laravel/framework": "^5.5 || ^6.0 || ^9.0",
+        "overtrue/laravel-wechat": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -20,5 +20,5 @@
             "Skpower\\Bdynotice\\": "src/"
         }
     },
-    "version": "v1.0.0"
+    "version": "v2.0.0"
 }
