--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.3",
-        "laravel/framework": "^5.5 || ^6.0 || ^9.0",
+        "laravel/framework": "^5.5 || ^6.0",
         "overtrue/laravel-wechat": "^5.0"
     },
     "autoload": {
